--- a/static/main.css
+++ b/static/main.css
@@ -14,6 +14,16 @@ body{
     padding: 20px 40px;
 }
 
+#role-box{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -50px;
+    margin-left: -125px;
+    font-size: 18px;
+    /* padding: 20px 40px; */
+}
+
 #video-streams{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
